@@ -1,6 +1,7 @@
 0.9619_01 2022-07-07
   [Changes]
     * Add [Changes] hedding to the Changes file that is generated by spvmdist.
+    * Non-native method must have its block.
   [BUG FIX]
     * Fix the bug that the linker output twice to stdout and stderr. Suppress stdout.
 0.9619 2022-07-07
